Added a update name of home page

--- a/index.html
+++ b/index.html
@@ -57,9 +57,12 @@
             <section class="history">
                 <h2><a href="historypage.html">History</a></h2>
                 <p>Kenya has a rich and diverse history that spans thousands of years. From ancient hunter-gatherer communities to the modern nation-state, Kenya's history is a tapestry of cultural and social evolution.</p>
-                <blockquote cite="https://kids.nationalgeographic.com/geography/countries/article/kenya">
+                <blockquote>
                     "Slavery is a big part of Kenya's history. During the 1600s and 1700s, many Kenyans were kidnapped and taken as slaves by Arabs, Europeans, and Americans."
-                </blockquote><p>—Source:<a href="https://kids.nationalgeographic.com/geography/countries/article/kenya">National Geographic</a></p>
+                    <cite>
+                        <p>—Source:<a href="https://kids.nationalgeographic.com/geography/countries/article/kenya">National Geographic</a></p>
+                    </cite>
+                </blockquote>
             </section>
 
             <section class="culture">
