--- a/wildlifepage.html
+++ b/wildlifepage.html
@@ -30,7 +30,7 @@
 
         <header class="sit-header">
 
-            <a href="homepage.html" class="logo"><img src="logo/Logo.webp" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="logo/Logo.webp" alt="logo"></a>
             
             <nav class="main-nav">
 
