Updated name of home page

--- a/creditspage.html
+++ b/creditspage.html
@@ -28,7 +28,7 @@
     <div class="site-wrapper">
         <a class="screen-reader-text" href="#site-main">Skip to content</a>
         <header class="sit-header">
-            <a href="Homepage.html" class="logo"><img src="logo/Logo.webp" alt="logo"></a>
+            <a href="index.html" class="logo"><img src="logo/Logo.webp" alt="logo"></a>
             <nav class="main-nav">
                 <button id="main-nav-button"><svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M24 18v1h-24v-1h24zm0-6v1h-24v-1h24zm0-6v1h-24v-1h24z" fill="#1040e2"/><path d="M24 19h-24v-1h24v1zm0-6h-24v-1h24v1zm0-6h-24v-1h24v1z"/></svg></button>  
 				<ul id="main-nav-list" class="toggled">
