Added new title for Example section

--- a/historypage.html
+++ b/historypage.html
@@ -59,20 +59,20 @@
 
                 <article class="history-example-1">
                     <img src="photo/History-example-1.webp" alt="Queen elizabeth">
-                    <h2>Culture Example 1</h2>
+                    <h2>History 1</h2>
                     <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor. 
                     </P>
                 </article>
 
                 <article class="history-example-2">
                     <img src="photo/History-example-2.webp" alt="Jomo kenyatta">
-                    <h2>Culture Example 2</h2>
+                    <h2>History 2</h2>
                     <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</P>
                 </article>
 
                 <article class="history-example-3">
                     <img src="photo/History-example-3.webp" alt="Nairobi">
-                    <h2>Culture Example 3</h2>
+                    <h2>History 3</h2>
                     <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</P>
                 </article>
 
