Added new logo and favicon

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="../Country website/favicon_package_v0.16/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../Country website/favicon_package_v0.16/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../Country website/favicon_package_v0.16/favicon-16x16.png">
-    <link rel="icon" type="safari-pinned-tab" sizes="14x14" href="../Country website/favicon_package_v0.16/safari-pinned-tab.svg" >
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="icon" type="android-chrome" sizes="512x512" href="favicon/android-chrome-512x512.png" >
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
@@ -30,7 +30,7 @@
 
         <header class="sit-header">
             <a href="Homepage.html" class="logo">
-                <img src="logo/Logo.webp" alt="logo">
+                <img src="logo/Logo.svg" alt="logo">
             </a>
             <nav class="main-nav">
                 <button id="main-nav-button">
