--- a/historypage.html
+++ b/historypage.html
@@ -55,7 +55,8 @@
                 <img src="photo/History-banner.webp" alt="jomo-kenyatta-statue">
             </section>
 
-            <div class="history-example">
+            <section class="history-example">
+                <h2 hidden>History-example</h2>
 
                 <article class="history-example-1">
                     <img src="photo/History-example-1.webp" alt="Queen elizabeth">
@@ -76,7 +77,7 @@
                     <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</P>
                 </article>
 
-            </div>
+            </section>
 
         </main>
         
