--- a/wildlifepage.html
+++ b/wildlifepage.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="android-chrome" sizes="512x512" href="favicon/android-chrome-512x512.png">
+    <link rel="mstile" sizes="310x310" href="favicon/mstile-310x310.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
