--- a/culturepage.html
+++ b/culturepage.html
@@ -52,7 +52,7 @@
             <section class="culture-video">
                 <h2>Culture  Video</h2>
                 <P>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</P>
-                <video src="video/culture-video.mp4" autoplay loop muted poster="path-to-preview-image.jpg"></video>
+                <video src="video/culture-video.mp4" autoplay loop muted></video>
             </section>
 
 
